<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ua.dp.itstep.shaptala.savingdatademo.SharePreferanceDemo">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:minEms="3"
            android:id="@+id/textViewName"
            android:textSize="@dimen/default_text_size"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextName"
            android:inputType="textPersonName"
            android:hint="@string/user"
            android:textSize="@dimen/default_text_size"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:minEms="3"
            android:id="@+id/textViewEmail"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/default_text_size"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmail"
            android:inputType="textEmailAddress"
            android:hint="user@mail.com"
            android:textSize="@dimen/default_text_size"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_gravity="center_vertical"
            android:minEms="3"
            android:id="@+id/textViewPhone"
            android:textSize="@dimen/default_text_size"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPhone"
            android:inputType="phone"
            android:hint="(000) 000-00-00"
            android:textSize="@dimen/default_text_size"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store"
        android:id="@+id/buttonStore"
        android:textSize="@dimen/default_text_size"
        android:onClick="storeDataSharedPreferances"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="Large Text"
        android:id="@+id/textViewStoredName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="Large Text"
        android:id="@+id/textViewStoredEmail"
        android:clickable="true"
        android:onClick="tryStartActivity"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="Large Text"
        android:id="@+id/textViewStoredPhone"
        android:clickable="true"
        android:onClick="tryStartActivity"
        />


</LinearLayout>
